2018-05-31  Daniel Hawkins
    * server/attack.c: Fix double application of resistance for life stealing attacktype.
      Also, add more complex algorithm for slowness to reduce >1 speed sometimes.

2018-05-28  Daniel Hawkins
    * common/living.c: Simplification of bracer/force/armor AC/WC code in fix_object:
      if we don't replace the best value, don't waste time subtracting and adding the same
      value to the object.
      Also, fix bug #823 by directly applying bracer ac and wc for serpentmen players.
    * server/monster.c: Skip performance shortcuts in monster_compute_path for
      multitile monsters.

2018-05-23  Daniel Hawkins
    * server/attack.c: Make death attacks do no damage when the monster cannot
      be affected by that death attack. Also make the order of the strstr check
      work for multiple races defined on the creature, and only one on the weapon.
      Make the strstr reorder on triple-damage calc, too.
    * server/init.c: Change race loading logic so that a race defined in lib/races
      is added to an arch's race field, rather than replace it. This allows for
      "slay vampire" and other slaying fields that aren't a normal race to actually
      function while still preserving summon lists for summon cult monster.

2018-05-21  Daniel Hawkins
    * server/attack.c: Make death attacks relevant.

2018-05-19  Daniel Hawkins
    * server/player.c: Load background music when moving through tiled maps.

2018-02-12  Daniel Hawkins
    * server/monster.c: Refactor to reduce calls to ob_blocked by remembering prior blocked tiles from the same run.
      This causes a small but noticable (~5%) reduction in overall pathing cost.
      Do a quick check in monster_compute_path to ensure there are multiple ways the monster can move around
      before attempting to go through the whole pathing algorithm. This yields significant performance improvements.

2018-02-11  Daniel Hawkins